@@ -307,7 +307,7 @@ Quiet mode. Sets _display_status=0;_display_busy=0;.
 		 Set resolution specification in pixels. Supported by SDL only (will be appended to --output-device argument).
 .TP
 .B -R, --recursive[=arg]
-		 Push files/directories to the files list recursively. The expression in variable _pushdir_re (default: "\.JPG$|\.PNG$|\.GIF$|\.BMP$|\.TIFF$|\.TIF$|\.JPEG$|\.JFIF$|\.PPM$|\.PGM$|\.PBM$|\.PCX$") lists extensions of filenames which will be loaded in the list. You can overwrite its value by optionally passing an expression here as argument. If starting with '+' or '|', the expression following will be appended to it. 
+		 Push files/directories to the files list recursively. The expression in variable _pushdir_re (default: "\.JPG$|\.PNG$|\.GIF$|\.BMP$|\.TIFF$|\.TIF$|\.JPEG$|\.JFIF$|\.PPM$|\.PGM$|\.PBM$|\.PCX|\.WEBP$") lists extensions of filenames which will be loaded in the list. You can overwrite its value by optionally passing an expression here as argument. If starting with '+' or '|', the expression following will be appended to it. 
 .TP
 .B -X, --no-pipe-load
 		 Do not load via external converter programs. 
